--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Smart Content Summarizer",
   "version": "1.0",
-  "description": "Summarizes content on hover using Groq AI",
+  "description": "Summarizes content on hover using Gemini AI",
   "permissions": [
     "activeTab",
     "storage",
