update with images for pub

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Smart Content Summarizer",
   "version": "1.0",
-  "description": "Summarizes content on hover using Gemini AI",
+  "description": "Summarizes content using Gemini AI",
   "permissions": [
     "activeTab",
     "storage",
@@ -23,7 +23,8 @@
       "32": "icons/icon32.png",
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
-    }
+    },
+    "default_title": "Smart Content Summarizer"
   },
   "background": {
     "service_worker": "background.js"
